--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   <body>
     <noscript>Чтобы запустить приложение, включите поддержку JavaScript в браузере</noscript>
     <div id="root"></div>
-    <div id="modal"></div>
+    <div id="react-portal"></div>
   </body>
 </html>
