fix: модальные окна, зависимости useEffect и пункты Можно_лучше

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="Сервис заказа звездных бургеров" />
-    <meta name="Yulia Zherebtsova" />
+    <meta name="description" content="Сервис заказа звездных бургеров" />
+    <meta name="author" content="Yulia Zherebtsova" />
     <title>Stellar Burgers</title>
   </head>
   <body>
-    <noscript>Чтобы запустить приложение, включите поддержку JavaScript в браузере</noscript>
+    <noscript
+      >Чтобы запустить приложение, включите поддержку JavaScript в
+      браузере</noscript
+    >
     <div id="root"></div>
     <div id="react-portal"></div>
   </body>
